--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-
+  <link rel="icon" type="image/x-icon" href="/images/laço.png">
   <title>Setembro Amarelo</title>
 
   <!-- bootstrap core css -->
@@ -428,10 +428,17 @@
             </div>
             <div>
               <p>
-                GitHubs: 
-                https://github.com/erickiks
-                https://github.com/ManuStardust
-                https://github.com/MarianaQuintinoRibeiro
+                GitHubs dos desenvolvedores:
+                <br> 
+                <a href=" https://github.com/erickiks">github erick</a>
+                <br> 
+                <a href=" https://github.com/ManuStardust">github manuela</a>
+                <br> 
+                <a href="https://github.com/MarianaQuintinoRibeiro">github mariana</a>
+                <br> 
+                <a href="https://github.com/JuliadevG">github julia</a>
+                <br> 
+                <a></a>pedro henrique</a>
               </p>
             </div>
             <a href="segredo.html">
