--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="icon" type="image/x-icon" href="/images/laço.png">
+  <link rel="icon" href="/images/laço.png">
   <title>Setembro Amarelo</title>
 
   <!-- bootstrap core css -->
