--- a/segredo.html
+++ b/segredo.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fique feliz com gatos!</title>
     <link rel="stylesheet" href="css/gato.css">
-
+    <link rel="icon" href="/images/gato.png">
 </head>
 <body>
     <div class="container">
